Added Unity Project

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+NewYearsGameJam2024/[Ll]ibrary/
+NewYearsGameJam2024/[Tt]emp/
+NewYearsGameJam2024/[Oo]bj/
+NewYearsGameJam2024/[Bb]uild/
+NewYearsGameJam2024/[Bb]uilds/
+NewYearsGameJam2024/[Ll]ogs/
+NewYearsGameJam2024/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
